compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__numbers__preceeding_zeros_float_const.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
assertion_line: 286
expression: "\nconst x = 09_179.1\n"
---
----- SOURCE CODE

const x = 09_179.1


----- COMPILED JAVASCRIPT
const x = 9_179.1;
