compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__numbers__preceeding_zeros_int.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
assertion_line: 252
expression: "\nfn main() {\n  09_179\n}\n"
---
----- SOURCE CODE

fn main() {
  09_179
}


----- COMPILED JAVASCRIPT
function main() {
  return 9_179;
}
