compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__numbers__preceeding_zeros_int_const.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
assertion_line: 276
expression: "\nconst x = 09_179\n"
---
----- SOURCE CODE

const x = 09_179


----- COMPILED JAVASCRIPT
const x = 9_179;
