compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__numbers__preceeding_zeros_int_pattern.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
assertion_line: 296
expression: "\nfn main(x) {\n  let assert 09_179 = x\n}\n"
---
import { makeError } from "../rakun.mjs";

function main(x) {
  if (x !== 9_179) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "main",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  return x;
}
